added icons and formatting

--- a/html-project-master/dev/index.html
+++ b/html-project-master/dev/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vulcan | The Progen Choice</title>
+    <title>Vulcan | The Proven Screen Choice</title>
 
     <!-- *** IMPORTANT *** PUT LINKS TO GOOGLE FONTS HERE -->
     <!-- Put Google Fonts Here -->
@@ -22,46 +22,66 @@
     <!-- Put your HTML code here... -->
     <div id="site-wrapper">
       <header>
+        <!-- following links appear in top left on desktop &tablet -->
         <p><a href="#">Install Map</a> <a href="#">Product Literature</a></p>
+        <!-- following links appear in top right on desktop & tablet -->
         <p><a href="">+1 712-642-2755</a> <a href="">Contact Us</a></p>
+        <img src="./images/logo-white-vulcan.svg" alt="Vulcan logo" />
         <nav>
           <ul>
-            <li>About</li>
-            <li>Products</li>
-            <li>Services</li>
-            <li>Parts</li>
-            <li>News</li>
-            <li>Contact</li>
+            <a href=""><li>About</li></a>
+            <a href=""><li>Products</li></a>
+            <a href=""><li>Services</li></a>
+            <a href=""><li>Parts</li></a>
+            <a href=""><li>News</li></a>
+            <a href=""><li>Contact</li></a>
           </ul>
         </nav>
-        <img src="" alt="" />
+        <img src="" alt="" /><!-- Image slideshow follows -->
         <h1>
-          We design and fabricate indestructible wastewater screens. Enough
-          said.
+          WE DESIGN AND FABRICATE INDESTRUCTIBLE WASTEWATER SCREENS. ENOUGH
+          SAID.
         </h1>
-        <div><a href="">View Products</a><a href="">View Services</a></div>
+        <div><a href="">VIEW PRODUCTS</a><a href="">VIEW SERVICES</a></div>
+        <!-- 3 circles here that display which slideshow image is displayed -->
+        <img src="./images/wave-white.png" alt="stylistic white wave overlay" />
       </header>
       <body>
-        <h2>Customized per order</h2>
+        <h2>CUSTOMIZED PER ORDER</h2>
         <p>
           Just as no two treatment plants are the same, no two of our screening,
           grit handling or sludge thickening products are either. We’ll help
           determine exactly what you need.
         </p>
         <section>
-          <img src="" alt="" />
+          <img src="./images/machine-01-300x274.png" alt="screening machine" />
           <h3>Screening</h3>
           <a href="#"><p>View Selection</p></a>
-          <img src="" alt="" />
+          <img
+            src="./images/machine-02-300x274.png"
+            alt="screen handling machine"
+          />
           <h3>Screenings Handling</h3>
           <a href="#"><p>View Selection</p></a>
+          <img
+            src="./images/machine-03-300x274.png"
+            alt="grit handling machine"
+          />
           <h3>Grit Handling</h3>
           <a href="#"><p>View Selection</p></a>
+          <img
+            src="./images/machine-04-300x274.png"
+            alt="sludge thickening machine"
+          />
           <h3>Sludge Thickening</h3>
           <a href="#"><p>View Selection</p></a>
         </section>
         <section>
-          <h2>Product Advisor</h2>
+          <img
+            src="./images/wave-blue-dark.png"
+            alt="dark blue stylistic wave"
+          />
+          <h2>PRODUCT ADVISOR</h2>
           <p>Find your project’s perfect fit.</p>
           <form action="get">
             <label for="#product-type">Product Type</label>
@@ -94,20 +114,27 @@
               <option value="lorem">Lorem</option>
               <option value="ipsum">Ipsum</option>
             </select>
-            <input type="submit" value="Find My Product" />
+            <input type="submit" value="FIND MY PRODUCT" />
           </form>
         </section>
         <section>
-          <h2>Delivering clean safe water since 1975. Refreshing indeed.</h2>
+          <h2>DELIVERING CLEAN, SAFE WATER SINCE 1975. REFRESHING INDEED.</h2>
           <p>
             Vulcan wastewater screening equipment has played a vital role in
             protecting the water supply of more than 900 cities and communities
             throughout the world.
           </p>
-          <a href="#"><p>About Us</p></a>
+          <a href="#"><p>ABOUT US</p></a>
         </section>
         <section>
-          <video src="https://vimeo.com/183929811"></video>
+          <iframe
+            src="https://player.vimeo.com/video/183929811?h=46d7273d42&title=0&byline=0&portrait=0"
+            width="640"
+            height="360"
+            frameborder="0"
+            allow="autoplay; fullscreen; picture-in-picture"
+            allowfullscreen
+          ></iframe>
         </section>
         <section>
           <form action="get">
@@ -115,23 +142,41 @@
               >Stay in the know. Sign up for our newsletter.</label
             >
             <input type="email" placeholder="Enter your Email" />
-            <input type="submit" value="Submit" />
+            <input type="submit" value="SUBMIT" />
           </form>
         </section>
         <section>
           <div>
-            <h2>Ready to spec Vulcan for your project</h2>
-            <a href=""><p>Contact Us</p></a>
+            <h2>READY TO SPEC VULCAN FOR YOUR PROJECT</h2>
+            <a href=""><p>CONTACT US</p></a>
           </div>
           <div>
-            <h2>Installed ina city near you</h2>
-            <a href=""><p>Find a Vulcan install</p></a>
+            <img src="./images/map.jpg" alt="" />
+            <h2>INSTALLED IN A CITY NEAR YOU</h2>
+            <a href=""><p>FINF A VULCAN INSTALL</p></a>
           </div>
         </section>
       </body>
       <footer>
-        <p><a href="">+1 712-642-2755</a> | <a href="">Contact Us</a></p>
-        <p>Copyright 2017. All rights reserved</p>
+        <img
+          src="./images/wave-blue-light.png"
+          alt="light blue stylistic wave"
+        />
+        <img src="./images/logo-white-vulcan.svg" alt="" />
+        <a href="#"
+          ><img src="./images/icon-white-facebook.png" alt="Facebook Icon"
+        /></a>
+        <a href="#"
+          ><img src="./images/icon-white-linkedin.png" alt="Facebook Icon"
+        /></a>
+        <p>
+          <a href=""
+            ><img src="./images/phone-icon.png" alt="" />+1 712-642-2755</a
+          >
+          |
+          <a href=""><img src="./images/mail-icon.png" alt="" /> CONTACT US</a>
+        </p>
+        <p>COPYRIGHT 2017. ALL RIGHTS RESEREVED</p>
       </footer>
     </div>
 
