--- a/html-project-master/dev/index.html
+++ b/html-project-master/dev/index.html
@@ -17,6 +17,7 @@
 
     <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
     <link rel="stylesheet" href="styles/styles.css?cachebuster=1" />
+    <link rel="stylesheet" href="./styles/normalize.css" />
   </head>
   <body>
     <!-- Put your HTML code here... -->
@@ -37,6 +38,35 @@
             <a href=""><li>Contact</li></a>
           </ul>
         </nav>
+        <section id="carousel">
+          <div class="carousel">
+            <ul>
+              <li class="slide active-photo" id="carouselImg1">
+                <img
+                  src="./images/header-slider-img-01.jpg"
+                  alt="large machinery"
+                />
+              </li>
+              <li class="slide" id="carouselImg2">
+                <img
+                  src="./images/header-slider-img-02.jpg"
+                  alt="welding worker"
+                />
+              </li>
+              <li class="slide" id="carouselImg3">
+                <img
+                  src="./images/header-slider-img-03.jpg"
+                  alt="2 industrial workers"
+                />
+              </li>
+            </ul>
+            <div class="carousel-nav">
+              <div class="circle" id="carouselNav1"></div>
+              <div class="circle" id="carouselNav2"></div>
+              <div class="circle" id="carouselNav3"></div>
+            </div>
+          </div>
+        </section>
         <img src="" alt="" /><!-- Image slideshow follows -->
         <h1>
           WE DESIGN AND FABRICATE INDESTRUCTIBLE WASTEWATER SCREENS. ENOUGH
