updated image tags
started on responsive images

--- a/html-project-master/dev/index.html
+++ b/html-project-master/dev/index.html
@@ -84,27 +84,44 @@
           determine exactly what you need.
         </p>
         <section>
-          <img src="./images/machine-01-300x274.png" alt="screening machine" />
+          <img 
+            src="./images/machine-01-300x274.png" 
+            alt="screening machine" 
+            srcset="./images/machine-01-300x274.png 300w,
+                    ./images/machine-01-768x702.png 768w,
+                    ./images/machine-01-912x834.png 912w"
+            sizes=""
+          />
           <h3>Screening</h3>
-          <a href="#"><p>View Selection</p></a>
+          <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
+
           <img
             src="./images/machine-02-300x274.png"
             alt="screen handling machine"
+            srcset=""
+            sizes=""
           />
           <h3>Screenings Handling</h3>
-          <a href="#"><p>View Selection</p></a>
+          <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
+
           <img
             src="./images/machine-03-300x274.png"
             alt="grit handling machine"
+            srcset=""
+            sizes=""
           />
           <h3>Grit Handling</h3>
-          <a href="#"><p>View Selection</p></a>
+          <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
+
           <img
             src="./images/machine-04-300x274.png"
             alt="sludge thickening machine"
+            srcset=""
+            sizes=""
           />
           <h3>Sludge Thickening</h3>
-          <a href="#"><p>View Selection</p></a>
+          <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
+
         </section>
         <section>
           <img
