created responsive images, mixins, variables, and responsive scss
created responsive images, mixins, variables, and responsive scss

--- a/dev/index.html
+++ b/dev/index.html
@@ -90,7 +90,11 @@
             srcset="./images/machine-01-300x274.png 300w,
                     ./images/machine-01-768x702.png 768w,
                     ./images/machine-01-912x834.png 912w"
-            sizes=""
+            sizes="(max-width: 600px) 300px,
+                  (max-width: 920px) 400px,
+                  (max-width: 1500px) 600px,
+                   (max-width: 2000px) 912px,
+                  300px"
           />
           <h3>Screening</h3>
           <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
@@ -98,8 +102,14 @@
           <img
             src="./images/machine-02-300x274.png"
             alt="screen handling machine"
-            srcset=""
-            sizes=""
+            srcset="./images/machine-02-300x274.png 300w,
+                    ./images/machine-02-768x702.png 768w,
+                    ./images/machine-02-912x834.png 912w"
+            sizes="(max-width: 600px) 300px,
+                  (max-width: 920px) 400px,
+                  (max-width: 1500px) 600px,
+                   (max-width: 2000px) 912px,
+                  300px"
           />
           <h3>Screenings Handling</h3>
           <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
@@ -107,8 +117,14 @@
           <img
             src="./images/machine-03-300x274.png"
             alt="grit handling machine"
-            srcset=""
-            sizes=""
+            srcset="./images/machine-03-300x274.png 300w,
+                    ./images/machine-03-768x702.png 768w,
+                    ./images/machine-03-912x834.png 912w"
+            sizes="(max-width: 600px) 300px,
+                  (max-width: 920px) 400px,
+                  (max-width: 1500px) 600px,
+                   (max-width: 2000px) 912px,
+                  300px"
           />
           <h3>Grit Handling</h3>
           <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
@@ -116,8 +132,14 @@
           <img
             src="./images/machine-04-300x274.png"
             alt="sludge thickening machine"
-            srcset=""
-            sizes=""
+            srcset="./images/machine-04-300x274.png 300w,
+                    ./images/machine-04-768x702.png 768w,
+                    ./images/machine-04-912x834.png 912w"
+            sizes="(max-width: 600px) 300px,
+                  (max-width: 920px) 400px,
+                  (max-width: 1500px) 600px,
+                   (max-width: 2000px) 912px,
+                  300px"
           />
           <h3>Sludge Thickening</h3>
           <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
