--- a/dev/index.html
+++ b/dev/index.html
@@ -83,7 +83,9 @@
           grit handling or sludge thickening products are either. We’ll help
           determine exactly what you need.
         </p>
-        <section>
+        <section class="waste-articles">
+
+          <article class="waste-collection">
           <img 
             src="./images/machine-01-300x274.png" 
             alt="screening machine" 
@@ -98,7 +100,9 @@
           />
           <h3>Screening</h3>
           <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
+        </article>
 
+        <article class="waste-collection">
           <img
             src="./images/machine-02-300x274.png"
             alt="screen handling machine"
@@ -113,7 +117,9 @@
           />
           <h3>Screenings Handling</h3>
           <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
+        </article>
 
+        <article class="waste-collection">
           <img
             src="./images/machine-03-300x274.png"
             alt="grit handling machine"
@@ -128,7 +134,9 @@
           />
           <h3>Grit Handling</h3>
           <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
+        </article>
 
+        <article class="waste-collection">
           <img
             src="./images/machine-04-300x274.png"
             alt="sludge thickening machine"
@@ -143,6 +151,7 @@
           />
           <h3>Sludge Thickening</h3>
           <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
+        </article>
 
         </section>
         <section>
