newsletter section -mobile

--- a/dev/index.html
+++ b/dev/index.html
@@ -84,16 +84,20 @@
           determine exactly what you need.
         </p>
         <section>
-          <img 
-            src="./images/machine-01-300x274.png" 
-            alt="screening machine" 
-            srcset="./images/machine-01-300x274.png 300w,
-                    ./images/machine-01-768x702.png 768w,
-                    ./images/machine-01-912x834.png 912w"
+          <img
+            src="./images/machine-01-300x274.png"
+            alt="screening machine"
+            srcset="
+              ./images/machine-01-300x274.png 300w,
+              ./images/machine-01-768x702.png 768w,
+              ./images/machine-01-912x834.png 912w
+            "
             sizes=""
           />
           <h3>Screening</h3>
-          <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
+          <a href="#" class="hidden-mobile"
+            ><p class="hidden-mobile">View Selection</p></a
+          >
 
           <img
             src="./images/machine-02-300x274.png"
@@ -102,7 +106,9 @@
             sizes=""
           />
           <h3>Screenings Handling</h3>
-          <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
+          <a href="#" class="hidden-mobile"
+            ><p class="hidden-mobile">View Selection</p></a
+          >
 
           <img
             src="./images/machine-03-300x274.png"
@@ -111,7 +117,9 @@
             sizes=""
           />
           <h3>Grit Handling</h3>
-          <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
+          <a href="#" class="hidden-mobile"
+            ><p class="hidden-mobile">View Selection</p></a
+          >
 
           <img
             src="./images/machine-04-300x274.png"
@@ -120,8 +128,9 @@
             sizes=""
           />
           <h3>Sludge Thickening</h3>
-          <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
-
+          <a href="#" class="hidden-mobile"
+            ><p class="hidden-mobile">View Selection</p></a
+          >
         </section>
         <section>
           <img
@@ -183,13 +192,15 @@
             allowfullscreen
           ></iframe>
         </section>
-        <section>
+        <section class="newsletter">
           <form action="get">
             <label for="email"
               >Stay in the know. Sign up for our newsletter.</label
             >
-            <input type="email" placeholder="Enter your Email" />
-            <input type="submit" value="SUBMIT" />
+            <div class="email-input">
+              <input type="email" placeholder="Enter your email" />
+              <input type="submit" value="SUBMIT" />
+            </div>
           </form>
         </section>
         <section>
