--- a/dev/index.html
+++ b/dev/index.html
@@ -22,6 +22,9 @@
 
     <!-- end Google Fonts -->
 
+    <!-- Font Awesome Link -->
+    <script src="https://kit.fontawesome.com/dd6e7e6cde.js" crossorigin="anonymous"></script>
+
     <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
     <link rel="stylesheet" href="styles/styles.css?cachebuster=1" />
     <link rel="stylesheet" href="./styles/normalize.css" />
@@ -33,7 +36,7 @@
         <!-- following links appear in top left on desktop &tablet -->
         <p><a href="#">Install Map</a> <a href="#">Product Literature</a></p>
         <!-- following links appear in top right on desktop & tablet -->
-        <p><a href="">+1 712-642-2755</a> <a href="">Contact Us</a></p>
+        <p><i class="fa-solid fa-phone"></i><a href="">+1 712-642-2755</a> <i class="fa-solid fa-envelope"></i><a href="">Contact Us</a></p>
         <img src="./images/logo-white-vulcan.svg" alt="Vulcan logo" />
         <nav>
           <ul>
@@ -252,19 +255,15 @@
           alt="light blue stylistic wave"
         />
         <img src="./images/logo-white-vulcan.svg" alt="" />
-        <a href="#"
-          ><img src="./images/icon-white-facebook.png" alt="Facebook Icon"
-        /></a>
-        <a href="#"
-          ><img src="./images/icon-white-linkedin.png" alt="Facebook Icon"
-        /></a>
         <p>
-          <a href=""
-            ><img src="./images/phone-icon.png" alt="" />+1 712-642-2755</a
-          >
-          |
-          <a href=""><img src="./images/mail-icon.png" alt="" /> CONTACT US</a>
-        </p>
+        <a href="#"
+          ><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="#"
+          ><i class="fa-brands fa-linkedin-in"></i></a>
+         
+            <i class="fa-solid fa-phone"></i><a href="">+1 712-642-2755</a> 
+            <i class="fa-solid fa-envelope"></i><a href="">Contact Us</a>
+          </p>
         <p>COPYRIGHT 2017. ALL RIGHTS RESEREVED</p>
       </footer>
     </div>
