--- a/dev/index.html
+++ b/dev/index.html
@@ -38,7 +38,7 @@
             <a href=""><li>Contact</li></a>
           </ul>
         </nav>
-        <section id="carousel">
+        <!-- <section id="carousel">
           <div class="carousel">
             <ul>
               <li class="slide active-photo" id="carouselImg1">
@@ -66,7 +66,9 @@
               <div class="circle" id="carouselNav3"></div>
             </div>
           </div>
-        </section>
+        </section> -->
+
+        <section>
         <img src="" alt="" /><!-- Image slideshow follows -->
         <h1>
           WE DESIGN AND FABRICATE INDESTRUCTIBLE WASTEWATER SCREENS. ENOUGH
@@ -75,14 +77,17 @@
         <div><a href="">VIEW PRODUCTS</a><a href="">VIEW SERVICES</a></div>
         <!-- 3 circles here that display which slideshow image is displayed -->
         <img src="./images/wave-white.png" alt="stylistic white wave overlay" />
+      </section>
       </header>
-      <body>
+      <main>
+        <section>
         <h2>CUSTOMIZED PER ORDER</h2>
         <p>
           Just as no two treatment plants are the same, no two of our screening,
           grit handling or sludge thickening products are either. We’ll help
           determine exactly what you need.
         </p>
+      </section>
         <section class="waste-articles">
 
           <article class="waste-collection">
@@ -90,12 +95,9 @@
             src="./images/machine-01-300x274.png" 
             alt="screening machine" 
             srcset="./images/machine-01-300x274.png 300w,
-                    ./images/machine-01-768x702.png 768w,
-                    ./images/machine-01-912x834.png 912w"
-            sizes="(max-width: 600px) 300px,
-                  (max-width: 920px) 400px,
-                  (max-width: 1500px) 600px,
-                   (max-width: 2000px) 912px,
+                    ./images/machine-01-768x702.png 768w,"
+            sizes="(min-width: 320px) 300px,
+                  (min-width: 1500px) 600px,
                   300px"
           />
           <h3>Screening</h3>
@@ -107,14 +109,11 @@
             src="./images/machine-02-300x274.png"
             alt="screen handling machine"
             srcset="./images/machine-02-300x274.png 300w,
-                    ./images/machine-02-768x702.png 768w,
-                    ./images/machine-02-912x834.png 912w"
-            sizes="(max-width: 600px) 300px,
-                  (max-width: 920px) 400px,
-                  (max-width: 1500px) 600px,
-                   (max-width: 2000px) 912px,
-                  300px"
-          />
+                    ./images/machine-02-768x702.png 768w,"
+            sizes="(min-width: 320px) 300px,
+                    (min-width: 1500px) 600px,
+                    300px"
+            />
           <h3>Screenings Handling</h3>
           <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
         </article>
@@ -124,12 +123,9 @@
             src="./images/machine-03-300x274.png"
             alt="grit handling machine"
             srcset="./images/machine-03-300x274.png 300w,
-                    ./images/machine-03-768x702.png 768w,
-                    ./images/machine-03-912x834.png 912w"
-            sizes="(max-width: 600px) 300px,
-                  (max-width: 920px) 400px,
-                  (max-width: 1500px) 600px,
-                   (max-width: 2000px) 912px,
+                    ./images/machine-03-768x702.png 768w,"
+            sizes="(min-width: 320px) 300px,
+                  (min-width: 1500px) 600px,
                   300px"
           />
           <h3>Grit Handling</h3>
@@ -141,14 +137,11 @@
             src="./images/machine-04-300x274.png"
             alt="sludge thickening machine"
             srcset="./images/machine-04-300x274.png 300w,
-                    ./images/machine-04-768x702.png 768w,
-                    ./images/machine-04-912x834.png 912w"
-            sizes="(max-width: 600px) 300px,
-                  (max-width: 920px) 400px,
-                  (max-width: 1500px) 600px,
-                   (max-width: 2000px) 912px,
-                  300px"
-          />
+                    ./images/machine-04-768x702.png 768w,"
+                    sizes="(min-width: 320px) 300px,
+                    (min-width: 1500px) 600px,
+                    300px"
+            />
           <h3>Sludge Thickening</h3>
           <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
         </article>
@@ -234,7 +227,7 @@
             <a href=""><p>FINF A VULCAN INSTALL</p></a>
           </div>
         </section>
-      </body>
+      </main>
       <footer>
         <img
           src="./images/wave-blue-light.png"
