added a pseudo class
added a pseudo class for mobile

--- a/dev/index.html
+++ b/dev/index.html
@@ -114,9 +114,7 @@
                   300px"
             />
             <h3>Screening</h3>
-            <a href="#" class="hidden-mobile"
-              ><p class="hidden-mobile">View Selection</p></a
-            >
+            <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
           </article>
 
 
@@ -134,7 +132,7 @@
           <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
         </article>
 
-        <article class="waste-collection">
+      <article class="waste-collection">
           <img
             src="./images/machine-03-300x274.png"
             alt="grit handling machine"
@@ -145,6 +143,8 @@
                   300px"
             />
             <h3>Grit Handling</h3>
+            <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
+        </article>
 
         <article class="waste-collection">
           <img
