text align center

--- a/dev/index.html
+++ b/dev/index.html
@@ -187,7 +187,7 @@
           />
           <div>
             <h2>PRODUCT ADVISOR</h2>
-            <p>Find your project’s perfect fit.</p>
+            <h4>Find your project’s perfect fit.</h4>
           </div>
           <form id="product-advisor" action="get">
             <div>
