--- a/dev/index.html
+++ b/dev/index.html
@@ -27,7 +27,6 @@
 
     <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
     <link rel="stylesheet" href="styles/styles.css?cachebuster=1" />
-    <link rel="stylesheet" href="./styles/normalize.css" />
   </head>
   <body>
     <!-- Put your HTML code here... -->
@@ -212,12 +211,13 @@
                 <option value="ipsum">Ipsum</option>
               </select>
             </div>
-            <br>
             <input type="submit" value="FIND MY PRODUCT" />
             
           </form>
           <a>sample button</a>
           <a class="secondary">sample secondary button</a>
+          <a class="transparent-buttons">sample secondary button</a>
+
         </section>
         <section>
           <h2>DELIVERING CLEAN, SAFE WATER SINCE 1975. REFRESHING INDEED.</h2>
