--- a/dev/index.html
+++ b/dev/index.html
@@ -24,6 +24,7 @@
 
     <!-- Font Awesome Link -->
     <script src="https://kit.fontawesome.com/dd6e7e6cde.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
 
     <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
     <link rel="stylesheet" href="styles/styles.css?cachebuster=1" />
@@ -38,14 +39,18 @@
         <!-- following links appear in top right on desktop & tablet -->
         <p><i class="fa-solid fa-phone"></i><a href="">+1 712-642-2755</a> <i class="fa-solid fa-envelope"></i><a href="">Contact Us</a></p>
         <img src="./images/logo-white-vulcan.svg" alt="Vulcan logo" />
+  
+
         <nav>
-          <ul>
-            <a href=""><li>About</li></a>
-            <a href=""><li>Products</li></a>
-            <a href=""><li>Services</li></a>
-            <a href=""><li>Parts</li></a>
-            <a href=""><li>News</li></a>
-            <a href=""><li>Contact</li></a>
+          <div class="openMenu"><i class="fa fa-bars"></i></div>
+          <ul class="mainMenu">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Parts</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Contact</a></li>
+            <div class="closeMenu"><i class="fa fa-times"></i></div>
           </ul>
         </nav>
         <!-- <section id="carousel">
@@ -114,7 +119,7 @@
                   300px"
             />
             <h3>Screening</h3>
-            <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
+            <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
           </article>
 
 
@@ -129,7 +134,7 @@
                     300px"
             />
           <h3>Screenings Handling</h3>
-          <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
+          <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
         </article>
 
       <article class="waste-collection">
@@ -143,7 +148,7 @@
                   300px"
             />
             <h3>Grit Handling</h3>
-            <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
+            <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
         </article>
 
         <article class="waste-collection">
@@ -157,7 +162,7 @@
                     300px"
             />
           <h3>Sludge Thickening</h3>
-          <a href="#" class="hidden-mobile"><p class="hidden-mobile">View Selection</p></a>
+          <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
         </article>
 
 
