changed burger menu
IGNORE HTML!!!

commented out carousel.js

updated: burger menu.js
burger-menu.scss

--- a/dev/index.html
+++ b/dev/index.html
@@ -37,10 +37,11 @@
         <p><a href="#">Install Map</a> <a href="#">Product Literature</a></p>
         <!-- following links appear in top right on desktop & tablet -->
         <p><i class="fa-solid fa-phone"></i><a href="">+1 712-642-2755</a> <i class="fa-solid fa-envelope"></i><a href="">Contact Us</a></p>
-        <img src="./images/logo-white-vulcan.svg" alt="Vulcan logo" />
-  
 
         <nav>
+
+          <img src="./images/logo-white-vulcan.svg" alt="Vulcan logo" id="logo"/>
+
           <div class="openMenu"><i class="fa fa-bars"></i></div>
           <ul class="mainMenu">
             <li><a href="#">About</a></li>
