about-us section complete
added divs to index.html

added _about-us.scss

added about-us to styles.scss

--- a/dev/index.html
+++ b/dev/index.html
@@ -253,15 +253,17 @@
           <a class="secondary">sample secondary button</a>
           <a class="transparent-buttons">sample secondary button</a>
         </section>
-        <section>
+        <div class="about-us-image">
+        <section class="about-us-text">
           <h2>DELIVERING CLEAN, SAFE WATER SINCE 1975. REFRESHING INDEED.</h2>
           <p>
             Vulcan wastewater screening equipment has played a vital role in
             protecting the water supply of more than 900 cities and communities
             throughout the world.
           </p>
-          <a href="#"><p>ABOUT US</p></a>
+          <a href="#" class="secondary">ABOUT US</a>
         </section>
+        </div>
         <section class="video">
           <div id="video-wrapper">
             <iframe
