added blue wave to responsive waste section

--- a/dev/index.html
+++ b/dev/index.html
@@ -130,6 +130,7 @@
       </section> 
       
       <main>
+        <section id="customized-order-section">
         <section>
           <h2>CUSTOMIZED PER ORDER</h2>
           <p>
@@ -138,83 +139,80 @@
             We’ll help determine exactly what you need.
           </p>
         </section>
+          <section class="waste-articles">
+            <article class="waste-collection">
+              <img
+                src="./images/machine-01-300x274.png"
+                alt="screening machine"
+                srcset="
+                  ./images/machine-01-300x274.png 300w,
+                  ./images/machine-01-768x702.png 768w
+                "
+                sizes="(min-width: 320px) 300px,
+                    (min-width: 1500px) 600px,
+                    300px"
+              />
+              <h3>Screening</h3>
 
-        <section class="waste-articles">
-          <article class="waste-collection">
-            <img
-              src="./images/machine-01-300x274.png"
-              alt="screening machine"
-              srcset="
-                ./images/machine-01-300x274.png 300w,
-                ./images/machine-01-768x702.png 768w
-              "
-              sizes="(min-width: 320px) 300px,
-                  (min-width: 1500px) 600px,
-                  300px"
-            />
-            <h3>Screening</h3>
+              <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
+            </article>
 
+            <article class="waste-collection">
+              <img
+                src="./images/machine-02-300x274.png"
+                alt="screen handling machine"
+                srcset="
+                  ./images/machine-02-300x274.png 300w,
+                  ./images/machine-02-768x702.png 768w
+                "
+                sizes="(min-width: 320px) 300px,
+                      (min-width: 1500px) 600px,
+                      300px"
+              />
+
+            <h3>Screenings Handling</h3>
             <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
           </article>
 
+
           <article class="waste-collection">
-            <img
-              src="./images/machine-02-300x274.png"
-              alt="screen handling machine"
-              srcset="
-                ./images/machine-02-300x274.png 300w,
-                ./images/machine-02-768x702.png 768w
-              "
-              sizes="(min-width: 320px) 300px,
+              <img
+                src="./images/machine-03-300x274.png"
+                alt="grit handling machine"
+                srcset="
+                  ./images/machine-03-300x274.png 300w,
+                  ./images/machine-03-768x702.png 768w
+                "
+                sizes="(min-width: 320px) 300px,
                     (min-width: 1500px) 600px,
                     300px"
-            />
+              />
+              <h3>Grit Handling</h3>
 
-          <h3>Screenings Handling</h3>
-          <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
-        </article>
+              <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
+          </article>
 
+            <article class="waste-collection">
+              <img
+                src="./images/machine-04-300x274.png"
+                alt="sludge thickening machine"
+                srcset="
+                  ./images/machine-04-300x274.png 300w,
+                  ./images/machine-04-768x702.png 768w
+                "
+                sizes="(min-width: 320px) 300px,
+                      (min-width: 1500px) 600px,
+                      300px"
+              />
 
-        <article class="waste-collection">
-            <img
-              src="./images/machine-03-300x274.png"
-              alt="grit handling machine"
-              srcset="
-                ./images/machine-03-300x274.png 300w,
-                ./images/machine-03-768x702.png 768w
-              "
-              sizes="(min-width: 320px) 300px,
-                  (min-width: 1500px) 600px,
-                  300px"
-            />
-            <h3>Grit Handling</h3>
-
+            <h3>Sludge Thickening</h3>
             <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
-        </article>
-
-          <article class="waste-collection">
-            <img
-              src="./images/machine-04-300x274.png"
-              alt="sludge thickening machine"
-              srcset="
-                ./images/machine-04-300x274.png 300w,
-                ./images/machine-04-768x702.png 768w
-              "
-              sizes="(min-width: 320px) 300px,
-                    (min-width: 1500px) 600px,
-                    300px"
-            />
-
-          <h3>Sludge Thickening</h3>
-          <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
-        </article>
-
+          </article>
+          <img src="./images/wave-blue-dark.png" alt="dark blue stylistic wave"/>
+          </section>
         </section>
         <section id="form-find-product">
-          <img
-            src="./images/wave-blue-dark.png"
-            alt="dark blue stylistic wave"
-          />
+          
           <div>
             <h2>PRODUCT ADVISOR</h2>
             <h4>Find your project’s perfect fit.</h4>
