--- a/dev/index.html
+++ b/dev/index.html
@@ -27,14 +27,21 @@
 
     <!-- Font Awesome Link -->
 
-    <script src="https://kit.fontawesome.com/dd6e7e6cde.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+    <script
+      src="https://kit.fontawesome.com/dd6e7e6cde.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
+      integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o="
+      crossorigin="anonymous"
+    />
 
     <script
       src="https://kit.fontawesome.com/dd6e7e6cde.js"
       crossorigin="anonymous"
     ></script>
-
 
     <!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
     <link rel="stylesheet" href="styles/styles.css?cachebuster=1" />
@@ -43,18 +50,26 @@
     <!-- Put your HTML code here... -->
     <div id="site-wrapper">
       <header>
-
         <nav class="secondary-navigation-container">
           <!-- following links appear in top left on desktop &tablet -->
           <div class="desktop-left">
-            <p><a href="#">Install Map</a> <a href="#">Product Literature</a></p>
+            <p>
+              <a href="#">Install Map</a> <a href="#">Product Literature</a>
+            </p>
           </div>
           <!-- following links appear in top right on desktop & tablet -->
           <div class="desktop-right">
-            <p><i class="fa-solid fa-phone"></i><a href="">+1 712-642-2755</a> <i class="fa-solid fa-envelope"></i><a href="">Contact Us</a></p>
+            <p>
+              <i class="fa-solid fa-phone"></i><a href="">+1 712-642-2755</a>
+              <i class="fa-solid fa-envelope"></i><a href="">Contact Us</a>
+            </p>
           </div>
-          <div class=logo-container>
-          <img id="logo" src="./images/logo-white-vulcan.svg" alt="Vulcan logo" />
+          <div class="logo-container">
+            <img
+              id="logo"
+              src="./images/logo-white-vulcan.svg"
+              alt="Vulcan logo"
+            />
           </div>
         </nav>
 
@@ -70,7 +85,7 @@
             <div class="closeMenu"><i class="fa fa-times"></i></div>
           </ul>
         </nav>
-        
+
         <section id="carousel">
           <div class="carousel">
             <div class="slide active-photo" id="carouselImg1">
@@ -107,13 +122,16 @@
 
           <div>
             <h1>
-              We design and fabricate indestructible wastewater screens. Enough said.
+              We design and fabricate indestructible wastewater screens. Enough
+              said.
             </h1>
             <div><a href="">View products</a><a href="">View services</a></div>
           </div>
           <!-- 3 circles here that display which slideshow image is displayed -->
-          <img src="./images/wave-white.png" alt="stylistic white wave overlay" />
-
+          <img
+            src="./images/wave-white.png"
+            alt="stylistic white wave overlay"
+          />
         </section>
       </header>
       <main>
@@ -141,7 +159,9 @@
             />
             <h3>Screening</h3>
 
-            <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
+            <a href="#" class="transparent-buttons"
+              ><p class="hidden-mobile">View Selection</p></a
+            >
           </article>
 
           <article class="waste-collection">
@@ -157,12 +177,13 @@
                     300px"
             />
 
-          <h3>Screenings Handling</h3>
-          <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
-        </article>
+            <h3>Screenings Handling</h3>
+            <a href="#" class="transparent-buttons"
+              ><p class="hidden-mobile">View Selection</p></a
+            >
+          </article>
 
-
-        <article class="waste-collection">
+          <article class="waste-collection">
             <img
               src="./images/machine-03-300x274.png"
               alt="grit handling machine"
@@ -176,8 +197,10 @@
             />
             <h3>Grit Handling</h3>
 
-            <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
-        </article>
+            <a href="#" class="transparent-buttons"
+              ><p class="hidden-mobile">View Selection</p></a
+            >
+          </article>
 
           <article class="waste-collection">
             <img
@@ -192,10 +215,11 @@
                     300px"
             />
 
-          <h3>Sludge Thickening</h3>
-          <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
-        </article>
-
+            <h3>Sludge Thickening</h3>
+            <a href="#" class="transparent-buttons"
+              ><p class="hidden-mobile">View Selection</p></a
+            >
+          </article>
         </section>
         <section id="form-find-product">
           <img
@@ -297,25 +321,22 @@
               <a href="">CONTACT US</a>
             </div>
           </div>
+          <div class="wave" id="footer-wave"></div>
         </section>
       </main>
       <footer>
-        <img class="wave"
-          src="./images/wave-blue-light.png"
-          alt="light blue stylistic wave"
-        />
         <div id="footer-wrapper">
-        <img src="./images/logo-white-vulcan.svg" alt="" />
-        <div id="footer-links">
-          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-          <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-          <div>
+          <img src="./images/logo-white-vulcan.svg" alt="" />
+          <div id="footer-links">
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            <div>
               <i class="fa-solid fa-phone"></i><a href="">+1 712-642-2755</a>
             </div>
             <div>
               <i class="fa-solid fa-envelope"></i><a href="">Contact Us</a>
             </div>
-              <span>COPYRIGHT 2017. ALL RIGHTS RESEREVED</span>
+            <span>COPYRIGHT 2017. ALL RIGHTS RESEREVED</span>
           </div>
         </div>
       </footer>
