fixed responsive waste (finally!)
added a class into waste-info, index.html

fixed mobile in the customized per order

--- a/dev/index.html
+++ b/dev/index.html
@@ -117,7 +117,7 @@
         </section>
       </header>
       <main>
-        <section>
+        <section class="waste-info">
           <h2>CUSTOMIZED PER ORDER</h2>
           <p>
             Just as no two treatment plants are the same, no two of our
