fixing footer icons and 5050 section centre alignment

--- a/dev/index.html
+++ b/dev/index.html
@@ -300,15 +300,15 @@
         </section>
         <section id="install-section">
           <div id="install-CTA">
-            <div>
-              <h2>INSTALLED IN <br />A CITY NEAR YOU</h2>
+            <div class="fiftyfiftycontent">
+              <h2>INSTALLED IN A CITY NEAR YOU</h2>
               <a href="">FIND A VULCAN INSTALL</a>
             </div>
           </div>
           <div id="contact-CTA">
-            <div>
+            <div class="fiftyfiftycontent">
               <h2>
-                READY TO SPEC <br />VULCAN <br />
+                READY TO SPEC VULCAN
                 FOR YOUR PROJECT
               </h2>
               <a href="">CONTACT US</a>
@@ -321,12 +321,14 @@
         <div id="footer-wrapper">
           <img src="./images/logo-white-vulcan.svg" alt="" />
           <div id="footer-links">
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-            <div>
+            <div class="social-links">
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            </div>
+            <div class="footer-contact-wrapper">
               <i class="fa-solid fa-phone"></i><a href="">+1 712-642-2755</a>
             </div>
-            <div>
+            <div class="footer-contact-wrapper">
               <i class="fa-solid fa-envelope"></i><a href="">Contact Us</a>
             </div>
             <span>COPYRIGHT 2017. ALL RIGHTS RESEREVED</span>
