fixed h3 and formatting in products
^^

--- a/dev/index.html
+++ b/dev/index.html
@@ -160,9 +160,11 @@
                     (min-width: 1500px) 600px,
                     300px"
               />
+              <div class="waste-flex">
               <h3>Screening</h3>
 
               <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
+            </div>
             </article>
 
             <article class="waste-collection">
@@ -178,8 +180,9 @@
                       300px"
               />
 
-            <h3>Screenings Handling</h3>
+            <h3>Screenings<br>Handling</h3>
             <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
+
           </article>
           <article class="waste-collection">
               <img
@@ -193,7 +196,7 @@
                     (min-width: 1500px) 600px,
                     300px"
               />
-              <h3>Grit Handling</h3>
+              <h3>Grit<br>Handling</h3>
 
               <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
           </article>
@@ -211,7 +214,7 @@
                       300px"
               />
 
-            <h3>Sludge Thickening</h3>
+            <h3>Sludge<br>Thickening</h3>
             <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
           </article>
           <img src="./images/wave-blue-dark.png" alt="dark blue stylistic wave"/>
