fixing hero from desktop > mobile

--- a/dev/index.html
+++ b/dev/index.html
@@ -122,7 +122,7 @@
               We design and fabricate indestructible wastewater screens. Enough
               said.
             </h1>
-            <div><a class="secondary" href="">View products</a><a class="secondary" href="">View services</a></div>
+            <div id="hero-buttons"><a class="secondary" href="">View products</a><a class="secondary" href="">View services</a></div>
           </div>
           <!-- 3 circles here that display which slideshow image is displayed -->
           <div class="carousel-nav">
