dark wave at base of customized order

--- a/dev/index.html
+++ b/dev/index.html
@@ -134,7 +134,10 @@
               We design and fabricate indestructible wastewater screens. Enough
               said.
             </h1>
-            <div id="hero-buttons"><a class="secondary" href="">View products</a><a class="secondary" href="">View services</a></div>
+            <div id="hero-buttons">
+              <a class="secondary" href="">View products</a
+              ><a class="secondary" href="">View services</a>
+            </div>
           </div>
           <!-- 3 circles here that display which slideshow image is displayed -->
           <div class="carousel-nav">
@@ -174,10 +177,12 @@
                     300px"
               />
               <div class="waste-flex">
-              <h3>Screening</h3>
+                <h3>Screening</h3>
 
-              <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
-            </div>
+                <a href="#" class="transparent-buttons"
+                  ><p class="hidden-mobile">View Selection</p></a
+                >
+              </div>
             </article>
 
             <article class="waste-collection">
@@ -193,11 +198,12 @@
                       300px"
               />
 
-            <h3>Screenings<br>Handling</h3>
-            <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
-
-          </article>
-          <article class="waste-collection">
+              <h3>Screenings<br />Handling</h3>
+              <a href="#" class="transparent-buttons"
+                ><p class="hidden-mobile">View Selection</p></a
+              >
+            </article>
+            <article class="waste-collection">
               <img
                 src="./images/machine-03-300x274.png"
                 alt="grit handling machine"
@@ -209,7 +215,7 @@
                     (min-width: 1500px) 600px,
                     300px"
               />
-              <h3>Grit<br>Handling</h3>
+              <h3>Grit<br />Handling</h3>
 
               <a href="#" class="transparent-buttons"
                 ><p class="hidden-mobile">View Selection</p></a
@@ -229,12 +235,13 @@
                       300px"
               />
 
-            <h3>Sludge<br>Thickening</h3>
-            <a href="#" class="transparent-buttons"><p class="hidden-mobile">View Selection</p></a>
-          </article>
-          <img src="./images/wave-blue-dark.png" alt="dark blue stylistic wave"/>
-
+              <h3>Sludge<br />Thickening</h3>
+              <a href="#" class="transparent-buttons"
+                ><p class="hidden-mobile">View Selection</p></a
+              >
+            </article>
           </section>
+          <div id="dark-blue-wave"></div>
         </section>
         <section id="form-find-product">
           <div>
