--- a/dev/index.html
+++ b/dev/index.html
@@ -68,6 +68,8 @@
 
             <nav class="main-navigation-container">
               <div class="openMenu"><i class="fa fa-bars"></i></div>
+              <div class="closeMenu"><i class="fa fa-times"></i></div>
+              <div class="list-container">
               <ul class="mainMenu">
                 <li><a href="#">About</a></li>
                 <li><a href="#">Products</a></li>
@@ -75,8 +77,12 @@
                 <li><a href="#">Parts</a></li>
                 <li><a href="#">News</a></li>
                 <li><a href="#">Contact</a></li>
-                <div class="closeMenu"><i class="fa fa-times"></i></div>
+                <div class="desktop-hidden">
+                  <li><a href="#">Installation Map</a></li>
+                  <li><a href="#">Product Literature</a></li>  
+                </div>
               </ul>
+              </div>
             </nav>
           </div>
         </div>
