restart from gulp build

--- a/dev/index.html
+++ b/dev/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vulcan | The Proven Screen Choice</title>
+    <title>Vulcan | The Proven Screen Choices</title>
 
     <!-- *** IMPORTANT *** PUT LINKS TO GOOGLE FONTS HERE -->
     <!-- Put Google Fonts Here -->
